--- a/app/src/main/res/layout/activity_edit_profile_view.xml
+++ b/app/src/main/res/layout/activity_edit_profile_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#78CDB4"
     tools:context=".EditProfileView">
 
     <ImageView
@@ -12,9 +13,8 @@
         android:layout_height="728dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.292"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/profile_edit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
